Codigo alterado para não ser necessário a var POSICAO no modelo de forma a saber o rank no hiscore.

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -9,6 +9,7 @@
 }
 else
 {
+    int rank = 1;
     <div class="text-center">
         <table id="tabela" class="table table-condensed">
             <thead>
@@ -30,7 +31,7 @@ else
                 @foreach (HiScores jogo in Model)
                 {
                     <tr>
-                        <td>@jogo.Posicao</td>
+                        <td>@rank</td>
                         <td>@jogo.Nome</td>
                         <td>@jogo.MoedasOuroTotal</td>
                         <td>
@@ -63,6 +64,7 @@ else
                         <td>@jogo.PocoesObtidas</td>
                         <td>@jogo.PocoesUsadas</td>
                     </tr>
+                    rank++;
                 }
             </tbody>
         </table>
