--- a/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
@@ -4,7 +4,6 @@
 }
 
 <h1> Modo de Jogo: Autónomo</h1>
-<br />
 
 <form asp-action="CriarJogo" method="post">
     <div class="form-group text-center">
@@ -18,21 +17,17 @@
         <label class="ArrangeChars">
             <input class="form-control" type="radio" asp-for="Nome" value="auto0">Auto 0
         </label>
-
-
-        <div class="explicacaoAutonomo">
-            <p> Auto 3: Neste modo o jogo fará apenas 3 rondas e ou morre ou desiste. </p>
-            <p> Auto 7: Neste modo o jogo fará apenas 7 rondas e ou morre ou desiste. </p>
-            <p> Auto 0: Neste modo o jogo fará no máximo 40 rondas, tentando ganhar. Se não morrer nem ganhar o jogo desiste ao fim das 40 rondas.</p>
-        </div>
     </div>
-    <div class="text-center">
+    <div class="explicacaoAutonomo">
+        <p> Auto 3: Neste modo o jogo fará apenas 3 rondas e ou morre ou desiste. </p>
+        <p> Auto 7: Neste modo o jogo fará apenas 7 rondas e ou morre ou desiste. </p>
+        <p> Auto 0: Neste modo o jogo fará no máximo 40 rondas, tentando ganhar. Se não morrer nem ganhar o jogo desiste ao fim das 40 rondas.</p>
+    </div>
+    <div class="rowBottun">
         <input name="PerfilTipo" value="S" type="hidden" />
         <input name="Autonomo" value="true" type="hidden" />
         <input type="image" value="CriarJogoAutonomo" src="~/images/btns/btn-jogar.png" class="BotaoJogar" />
-    </div>
-    <div class="text-right">
-        <a asp-action="CriarJogo"><img src="~/images/btns/btn-normal.png" class="BotaoJogar" /></a>
+        <a asp-action="CriarJogo" class="BotaoModo"><img src="~/images/btns/btn-normal.png" /></a>
     </div>
 </form>
 
