Limpeza de código, alteração nos calculos de vida, moedas etc

--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -36,6 +36,7 @@
             <p class="MensagemBonus">Áreas Examinadas: @Model.TotalAreasExaminadas</p>
             <p class="MensagemBonus">Ataques: @Model.TotalAtaques</p>
             <p class="MensagemBonus">Movimentos: @Model.TotalMover</p>
+            <p class="MensagemBonus"> Vida do jogador: @Model.PontosVida</p>
         </div>
 
         <div class="col-sm-6 text-center">
