Correção para o item chave nao estar sempre a aparecer

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -140,7 +140,7 @@
                             {
                                 <img src="~/images/Icons/icon-pocaoVida.png" class="iconsItems" />
                             }
-                            @if (Model.Chave)
+                            @if (Model.EncontradoChave)
                             {
                                 <img src="~/images/Icons/icon-key.png" class="iconsItems" />
                             }
