--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Apresentacao">Apresentação</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="HiScores">Hi-Scores</a></li>
                     <li><a asp-area="" asp-controller="Jogo" asp-action="CriarJogo">Novo Jogo</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="InstrucoesJogo">Instruções de Jogo</a></li>
                 </ul>
             </div>
         </div>
