--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -271,7 +271,7 @@ input[type='radio'] {
 .monstro {
     position: fixed;
     width: 20%;
-    bottom: 50px;
+    bottom: 10%;
     left: 23%;
     z-index: -1;
     display:inline-block;
@@ -419,9 +419,9 @@ h4 {
     width:70%;
 }
 .danoNoMonstro {
-    position:relative;
-    left: 36%;
-    top:1%;
+    position:absolute;
+    left: 39%;
+    bottom:70%;
     color:lavender;
     font-family: Verdana;
     font-size: 1.7vw;
@@ -467,8 +467,11 @@ h4 {
 }
 
 .ImagemBotoes {
-    height: 60%;
-    width: 60%;
+    height: 30%;
+    width: 30%;
+}
+.TextoInstrucoes {
+    font-size: 0.7vw;
 }
 
 .iconChave {
@@ -486,3 +489,42 @@ h4 {
     height: 80%;
     width: 90%;
 }
+
+
+/** LightBox Effext **/
+
+.thumbnail {
+    max-width: 90%;
+}
+.italic {
+    font-style: italic;
+}
+
+.small {
+    font-size: 18px;
+}
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+}
+
+    .lightbox img {
+        /** Pad the lightbox image */
+        max-width: 90%;
+        max-height: 80%;
+        margin-top: 2%;
+    }
+
+    .lightbox:target {
+        /** Remove default browser outline */
+        outline: none;
+        /** Unhide lightbox **/
+        display: block;
+    }
