--- a/SetepassosPRJ/Views/Home/InstrucoesJogo.cshtml
+++ b/SetepassosPRJ/Views/Home/InstrucoesJogo.cshtml
@@ -7,23 +7,19 @@
 <h1>Instruções de Jogo</h1>
 <div class="row tabelaInstrucoes">
     <div class="col-sm-12" border>
-        <p>O <strong>objetivo</strong> do jogo é fazer o máximo de pontos. Os pontos são contabilizados em Donuts.</p>
-        <p>Se ganhares o jogo obténs bónus de Donuts. Para ganhar o jogo é necessário:</p>
-        <p>- Encontrares a chave. Podes encontrar matando um monstro ou examinando uma sala.</p>
-        <p>- Avançares da Sala 7 com a chave. Podes usar o botão Avançar ou o Fugir do monstro com a chave na sala 7.</p>
+        <p>O <strong>objetivo</strong> do jogo é fazer o máximo de pontos (Donuts). Se conseguires ganhar o jogo obténs Donuts de bónus. Para ganhar o jogo é necessário encontrares a chave (matando um monstro ou examinando uma sala) e avançares ou fugires do monstro na Sala 7 com a chave.</p>
         <p><strong>Regras:</strong></p>
         <p>- Começas na sala 1 e existem 7 salas. Em cada uma das salas pode ou não existir um monstro. O monstro pode estar a guardar a sala ou pode estar escondido e nesse caso só aparece quando examinas a sala.</p>
-        <p>- Cada uma das salas pode ser examinada 1 vez apenas e só podes examinar salas que não tenham monstro.</p>
         <p>- Sempre que matas um monstro este pode dar um item surpresa, ouro, a chave ou não dar nada.</p>
-        <p>- Sempre que examinas uma sala podes encontrar um item surpresa, ouro, a chave, um monstro ou nada.</p>
         <p>- <mark>Atacar:</mark> Ao atacares um monstro ele vai sempre atacar-te de volta.</p>
         <p>- <mark>Fugir:</mark> Fugir do monstro leva-te para a casa seguinte, exceto se tiveres na última casa e sem chave, neste caso leva-te para a casa anterior. Sempre que foges de um monstro ele pode atacar-te uma última vez</p>
         <p>- <mark>Beber Poção:</mark> Podes beber uma poção em qualquer altura, com ou sem monstro, desde que tenhas poções. Se existir monstro ele não te ataca quando fazes esta ação.</p>
         <p>- <mark>Avançar:</mark> Permite avançares para a próxima casa, só podes fazê-lo quando não há monstro. Na última casa só podes fazer esta ação se tiveres a chave contigo.</p>
         <p>- <mark>Recuar:</mark> Permite recuares para a casa anterior, exceto na primeira. Só podes fazê-lo quando não há monstro.</p>
+        <p>- <mark>Examinar Sala:</mark> Permite examinares uma sala. Cada sala só pode ser examinada 1 vez e só se não existir monstro. Sempre que examinas uma sala podes encontrar um item surpresa, ouro, a chave, um monstro ou nada.</p>
         <p>- <mark>Desistir:</mark> Desistes imediatamente do jogo. Conta para o score os pontos que obtiveste durante o jogo.</p>
         <p>- Morres quando a tua vida chega a 0. Conta para o score os pontos que obtiveste durante o jogo.</p>
-        <p>- Passagem do tempo. Existem 3 tipos de ação que podes tomar: Movimento (Avançar, Recuar, Fugir); Ataque (Atacar); Examinar (Examinar sala). Quando fizeres um destes 3 tipos de ações 7 vezes começas a ser afetado pelo cansaço. O cansaço afeta a tua vida em -0.5 sempre que tomas qualquer ação (inclui beber poção). <i>Se estiveres na última casa, possuires a chave e avançares ou fugires com 0.5 de vida ou menos, o cansaço não te mata e vences o jogo.</i></p>
+        <p>- Passagem do tempo. Existem 3 tipos de ação que podes tomar: Movimento (Avançar, Recuar, Fugir); Ataque (Atacar); Examinar (Examinar sala). Quando fizeres um destes 3 tipos de ações 7 vezes começas a ser afetado pelo cansaço que afeta a tua vida em -0.5 sempre que tomas qualquer ação (inclui beber poção). <i>Se estiveres na última casa e a ação que tomares te permitir ganhar não morres de cansaço.</i></p>
     </div>
 </div>
 <div>
@@ -35,7 +31,6 @@
                 <img src="~/images/ImagensInstrucoes/Instrucoes_sem_monstro.png" class="thumbnail">
             </a>
             <p class="italic small">Imagem A: Janela sem monstro.</p>
-            <!-- lightbox container hidden with CSS -->
             <a href="#_" class="lightbox" id="img1">
                 <img src="~/images/ImagensInstrucoes/Instrucoes_sem_monstro.png" alt="Imagem Instrucoes 1">
             </a>
@@ -45,7 +40,6 @@
                 <img src="~/images/ImagensInstrucoes/Instrucoes_com_monstro.png" class="thumbnail">
             </a>
             <p class="italic small">Imagem B: Janela com monstro.</p>
-            <!-- lightbox container hidden with CSS -->
             <a href="#_" class="lightbox" id="img2">
                 <img src="~/images/ImagensInstrucoes/Instrucoes_com_monstro.png" alt="Imagem Instrucoes 2">
             </a>
