--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -470,35 +470,6 @@ h4 {
     text-shadow: 0.8px 0.8px 0.8px black;
 }
 
-.ImagemInstrucoes {
-    position: relative;
-    height: 50%;
-    width: 90%;
-}
-
-.ImagemBotoes {
-    height: 30%;
-    width: 30%;
-}
-.TextoInstrucoes {
-    font-size: 0.7vw;
-}
-
-.iconChave {
-    height: 10%;
-    width: 10%;
-}
-
-.iconMapaSala {
-    height: 10%;
-    width: 30%;
-}
-
-.ImagemInstrucoesSM {
-    position: relative;
-    height: 80%;
-    width: 90%;
-}
 
 
 /** LightBox Effext **/
@@ -520,7 +491,7 @@ h4 {
     width: 100%;
     height: 100%;
     text-align: center;
-    top: 0;
+    top: 3px;
     left: 0;
     background: rgba(0,0,0,0.8);
 }
