Alterações no tamanho do gato preto e na mensagem do item que dá sorte.

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -89,7 +89,7 @@
                 <div class="iconMoeda">
                     <img src="~/images/Icons/icon-moeda.png" class="icons" />  <strong>@Model.MoedasOuro</strong>  <p class="MensagemOutro"> @Model.MensagemOuro @Model.MensagemPlim</p>
                 </div>
-
+                <div>GameID: @Model.GameID </div>
             </div>
         </div>
 
